<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Toga</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="host_party_action">Host party</string>
    <string name="no_hosted_parties">You currently are hosting no parties</string>
    <string name="no_parties">There are currently no parties</string>

    <string-array name="nav_drawer_array">
        <item>Party Now</item>
        <item>Browse</item>
        <item>Map</item>
        <item>Profile</item>
        <item>Hosting</item>
        <item>Invites</item>
    </string-array>
    <string-array name="fragment_adapter_array">
        <item>Party 1</item>
        <item>Party 2</item>
        <item>Party 3</item>
        <item>Party 4</item>
        <item>Party 5</item>
        <item>Party 6</item>
        <item>Party 7</item>
        <item>Party 8</item>
    </string-array>

    <string name="title_activity_create_party">Create Party</string>
    <string name="create_party_title_label">Party Title</string>
    <string name="create_party_title_hint">Enter a title for your party</string>
    <string name="create_party_type">Party Type?</string>
    <string name="create_party_location_hint">Enter your party\'s location</string>
    <string name="create_party_cancel">Cancel</string>
    <string name="create_party_confirm">Host</string>
    <string name="party_type_public">Public</string>
    <string name="party_type_private">Private</string>
    <string name="party_type_vip">VIP</string>
    <string name="done">Host</string>
    <string name="cancel">Cancel</string>
    <string name="create_party_description_hint">Description (optional)</string>
    <string name="edit">Edit</string>
    <string name="title_activity_party_details">MainActivity</string>
    <string name="action_sort">Sort</string>
    <string name="new_user_get_started">Get started</string>
    <string name="new_user_continue">Continue</string>
    <string name="title_activity_new_user_activiy">MainActivity</string>
    <string name="change_theme">CHANGE THEME</string>
    <string name="party_location">Party Location</string>
    <string name="new_user_register">Sign Up</string>
    <string name="navigate">Navigate</string>
    <string name="refresh">Refresh</string>
    <string name="new_user_sign_up">To sign up or log in.</string>
    <string name="new_user_first_and_last">First and Last</string>
    <string name="edu_email">.edu email</string>
    <string name="new_user_name">Your name</string>
    <string name="new_user_choose_password">Choose password</string>
    <string name="new_user_sign_in">Sign in</string>
    <string name="new_user_password">Password</string>
    <string name="title_activity_verify_email">MainActivity</string>
    <string name="new_user_log_in">Log in</string>
    <string name="party_details">Party Details</string>
    <string name="verify_email">Verify Email</string>
    <string name="title_activity_theme_picker">MainActivity</string>
    <string name="theme_picker">Theme Picker</string>
    <string name="browse_party_no_parties_nearby">There are currently no parties near you...</string>
    <string name="create_party_theme_description">Party theme</string>
    <string name="create_party_date_dialog">Date</string>
    <string name="create_party_time_dialog">Time</string>
    <string name="invite_list_no_new">No new invitations</string>
    <string name="location_picker_here">Here</string>
    <string name="could_not_contact_servers">Could not contact servers, please try again</string>
    <string name="new_user_valid_email">Please enter a valid college email account.</string>
    <string name="new_user_enter_password">Please enter your password</string>
    <string name="new_user_enter_name">Please enter your name</string>
    <string name="new_user_name_length_limit">Names must be under 32 characters</string>
    <string name="new_user_password_length_limit">Password must be under 32 characters</string>
    <string name="new_user_email_description">User Email</string>
    <string name="new_user_enter_your_password">Enter the password for your account.</string>
    <string name="new_user_name_with_friends">What do you go by with friends?</string>
    <string name="new_user_pick_a_password">Pick a password that will be easy to remember.\nPassword must be at least 6 characters.</string>
    <string name="new_user_signed_up">Signed up!</string>
    <string name="new_user_failed_to_sign_up">Failed to sign up</string>
    <string name="new_user_logged_in">Logged in!</string>
    <string name="verify_email_not_yet">The confirmation email has not yet been verified</string>
    <string name="verify_email_registration_error">There was an error with the registration</string>
    <string name="theme_picker_description">Party theme image</string>

</resources>
