<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/new_user_email_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="#e5e5e5">
        <!--android:background="@drawable/new_user_background"-->

    <ImageView
            android:id="@+id/new_user_email_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:scaleType="centerInside"
            android:src="@drawable/no_invitations"
            android:contentDescription="@string/new_user_email_description"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="24dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/pressed_toga"
            android:textSize="30sp"
            android:text="@string/new_user_get_started"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="26dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/header_grey"
            android:textSize="14sp"
            android:text="@string/new_user_sign_up"
            />

    <EditText
            android:id="@+id/new_user_email_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginBottom="8dp"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            android:hint="@string/edu_email"
            android:textColor="@color/header_grey"
            android:lines="1"/>

    <Button
            android:id="@+id/new_user_email_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="24dp"
            android:text="@string/new_user_continue"
            android:textColor="@color/header_grey"/>

</LinearLayout>