<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <FrameLayout
                android:id="@+id/create_party_theme_layout"
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:layout_marginBottom="8dp"
                android:clickable="true">

            <ImageView
                    android:id="@+id/create_party_theme_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/create_party_theme_description"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:paddingRight="8dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:gravity="right"
                    android:textColor="#FFF"
                    android:textSize="12sp"
                    android:text="@string/change_theme"
                    android:background="#BB000000"/>

            <FrameLayout
                    android:id="@+id/create_party_theme_layout_background"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/themed_layout_background"/>

        </FrameLayout>

        <EditText
                android:id="@+id/create_party_title_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/create_party_title_hint"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_party_type"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="4dp"
                style="?android:listSeparatorTextViewStyle"/>

        <RadioGroup
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp">

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                <RadioButton
                        android:id="@+id/create_party_radio_public"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/party_type_public"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                <RadioButton
                        android:id="@+id/create_party_radio_private"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/party_type_private"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                <RadioButton
                        android:id="@+id/create_party_radio_vip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/party_type_vip"/>

            </LinearLayout>

        </RadioGroup>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp">

            <Button
                    android:id="@+id/create_party_date_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:paddingLeft="12dp"
                    style="?android:attr/spinnerStyle"/>

            <Button
                    android:id="@+id/create_party_time_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="12dp"
                    style="?android:attr/spinnerStyle"/>

        </LinearLayout>

        <EditText
                android:id="@+id/create_party_location_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/create_party_location_hint"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:clickable="true"/>

        <EditText
                android:id="@+id/create_party_description_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:minLines="5"
                android:gravity="top|left"
                android:hint="@string/create_party_description_hint"/>

    </LinearLayout>

</ScrollView>