<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <LinearLayout
            android:id="@+id/party_details_downloadProgress"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone" >

        <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
        </ProgressBar>
    </LinearLayout>


    <FrameLayout android:id="@+id/party_details_content"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">

        <ScrollView
                android:layout_height="match_parent"
                android:layout_width="match_parent">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                <ImageView
                        android:layout_height="96dp"
                        android:layout_width="match_parent"
                        android:src="@drawable/black_light_party"
                        android:scaleType="centerCrop"
                        android:layout_marginBottom="8dp"/>

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/party_details_title_editText"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="8dp"
                        android:editable="false"
                        android:clickable="false"
                        />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/create_party_type"
                        style="?android:listSeparatorTextViewStyle"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="4dp"/>

                <RadioGroup
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_marginBottom="8dp"
                            android:orientation="horizontal"
                        >

                    <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center">

                        <RadioButton android:id="@+id/party_details_radio_public"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="@string/party_type_public"
                                     android:clickable="false"
                                />
                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center">

                        <RadioButton android:id="@+id/party_details_radio_private"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="@string/party_type_private"
                                     android:clickable="false"
                                />

                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center">

                        <RadioButton android:id="@+id/party_details_radio_vip"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="@string/party_type_vip"
                                     android:clickable="false"
                                />
                    </LinearLayout>

                </RadioGroup>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="8dp">

                    <Button
                            android:id="@+id/party_details_date_button"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:paddingLeft="12dp"
                            style="?android:attr/spinnerStyle"
                            android:clickable="false"/>

                    <Button
                            android:id="@+id/party_details_time_button"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            style="?android:attr/spinnerStyle"
                            android:clickable="false"/>


                </LinearLayout>

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/party_details_location_editText"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="8dp"
                        android:hint="@string/create_party_location_hint"
                        android:editable="false"
                        android:clickable="false"/>

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/party_details_description_editText"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:minLines="5"
                        android:gravity="top|left"
                        android:editable="false"
                        android:clickable="false"/>

            </LinearLayout>
        </ScrollView>

    </FrameLayout>
</FrameLayout>